# zenex-contracts

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-threat-model/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/02-code-quality-and-static-analysis/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-integration-tests-and-documentation/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-07-PLAN.md  03-07-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
account/: Cargo.toml
account/src/: contract.rs  lib.rs  test.rs
docs/: THREAT-MODEL.md
docs/audit/: PROTOCOL-SPEC.md  THREAT-MODEL.md  THREAT-TEST-MATRIX.md
docs/dev/: ARCHITECTURE.md  DEPLOYMENT.md
ed25519-verifier/: Cargo.toml
ed25519-verifier/src/: contract.rs  lib.rs  test.rs
factory/: Cargo.toml
factory/src/: lib.rs  storage.rs  test.rs
governance/: Cargo.toml
governance/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
price-verifier/: Cargo.toml
price-verifier/src/: error.rs  lib.rs  pyth.rs  storage.rs  test.rs
price-verifier/src/testdata/: 1_feed.hex  2_feeds.hex  50_feeds.hex
strategy-vault/: Cargo.toml
strategy-vault/src/: contract.rs  lib.rs  storage.rs  strategy.rs  test.rs
test-suites/: Cargo.toml
test-suites/fuzz/: .gitignore  Cargo.toml  README.md
test-suites/fuzz/fuzz_targets/: fuzz_fill.rs  fuzz_liquidation.rs  fuzz_trading_general.rs  fuzz_triggers.rs
test-suites/src/: assertions.rs  constants.rs  lib.rs  pyth_helper.rs  setup.rs  test_fixture.rs  token.rs
test-suites/src/dependencies/: governance.rs  mod.rs  price_verifier.rs  token.rs  trading.rs  treasury.rs  vault.rs
test-suites/tests/: adl_expected_values.py  test_adl.rs  test_authorization.rs  test_cost_profile.rs  test_deployment.rs  test_fee_accrual.rs  test_liquidation.rs  test_position_lifecycle.rs  test_timelock.rs  test_trading_actions.rs  test_trading_adl.rs  test_trading_config.rs  test_trading_execute.rs  test_trading_liquidation.rs  test_trading_liquidations.rs  test_trading_pnl.rs  test_trading_position.rs  test_trading_positions.rs  test_trading_proptest.proptest-regressions  test_trading_proptest.rs  test_trading_risk.rs  test_trading_validation.rs  test_trading_views.rs
timelock/: Cargo.toml
timelock/src/: errors.rs  events.rs  lib.rs
trading/: Cargo.toml
trading-admin/: Cargo.toml
trading-admin/src/: lib.rs
trading-sdk/: README.md  package.json
trading-sdk/src/: index.ts
trading/fuzz/: Cargo.toml
trading/fuzz/fuzz_targets/: fuzz_fee_breakdown.rs  fuzz_interest.rs  fuzz_pnl.rs
trading/src/: constants.rs  contract.rs  errors.rs  events.rs  interface.rs  lib.rs  storage.rs  test.rs  testutils.rs  types.rs  validation.rs
trading/src/dependencies/: mod.rs  price_verifier.rs  treasury.rs  vault.rs
trading/src/trading/: actions.rs  adl.rs  config.rs  context.rs  core.rs  execute.rs  fees.rs  funding.rs  interest.rs  market.rs  mod.rs  oracle.rs  position.rs  price_verifier.rs  rates.rs  submit.rs  trading.rs  user_actions.rs
treasury/: Cargo.toml
treasury/src/: lib.rs  storage.rs  test.rs
vault/: Cargo.toml
vault/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  token.rs
vault/tests/: basic_operations.rs
wasm/: soroban_token_contract.wasm  strategy_vault.wasm  trading.wasm  vault.wasm  vault_optimized.wasm
webauthn-verifier/: Cargo.toml
webauthn-verifier/src/: contract.rs  lib.rs  test.rs
zenex-factory/: Cargo.toml
zenex-factory/src/: events.rs  lib.rs  storage.rs  test.rs
