[workspace]
resolver = "2"
members = [
  "account",
  "ed25519-verifier",
  "price-verifier",
  "strategy-vault",
  "test-suites",
  "trading",
  "trading-admin",
  "treasury",
  "webauthn-verifier",
  "zenex-factory",
]

[workspace.dependencies.soroban-sdk]
version = "25.0.2"

[workspace.dependencies.soroban-fixed-point-math]
version = "1.5.0"

[workspace.dependencies.sep-40-oracle]
version = "1.4.0"

[workspace.dependencies.sep-41-token]
version = "1.4.0"

[workspace.dependencies.stellar-access]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[workspace.dependencies.stellar-macros]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[workspace.dependencies.stellar-accounts]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[workspace.dependencies.stellar-contract-utils]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[workspace.dependencies.stellar-tokens]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[workspace.dependencies.p256]
version = "0.13.2"

[workspace.dependencies.hex-literal]
version = "1.1.0"

[workspace.dependencies.ed25519-dalek]
version = "2.1.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
