[workspace]
resolver = "2"
members = [
  "price-verifier",
  "strategy-vault",
  "test-suites",
  "trading",
  "timelock",
  "treasury",
  "factory",
]

[workspace.dependencies.soroban-sdk]
version = "25.3.0"

[workspace.dependencies.soroban-fixed-point-math]
version = "1.5.0"

[workspace.dependencies.stellar-access]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[workspace.dependencies.stellar-contract-utils]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[workspace.dependencies.stellar-macros]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[workspace.dependencies.stellar-tokens]
git = "https://github.com/OpenZeppelin/stellar-contracts"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
