[package]
name = "test-suites"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-fixed-point-math = { workspace = true }
trading = { path = "../trading", features = ["testutils"] }
factory = { path = "../factory", features = ["testutils"] }

[dev-dependencies]
proptest = "1"
