[package]
name = "test-suites"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-fixed-point-math = { workspace = true }
trading = { path = "../trading", features = ["testutils"] }
factory = { path = "../factory", features = ["testutils"] }
price-verifier = { path = "../price-verifier", features = ["testutils"] }
treasury = { path = "../treasury", features = ["testutils"] }
governance = { path = "../governance", features = ["testutils"] }
strategy-vault = { path = "../strategy-vault", features = ["testutils"] }
stellar-access = { workspace = true }
ed25519-dalek = { version = "2", features = ["alloc"] }

[dev-dependencies]
proptest = "1"
