[package]
name = "trading-admin"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
testutils = [
    "soroban-sdk/testutils",
    "sep-40-oracle/testutils",
    "trading/testutils",
]

[dependencies]
soroban-sdk = { workspace = true }
sep-40-oracle = { workspace = true }
soroban-fixed-point-math = { workspace = true }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }
trading = { path = "../trading" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sep-40-oracle = { workspace = true, features = ["testutils"] }
trading = { path = "../trading", features = ["testutils"] }
