[package]
name = "trading"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
library = []
testutils = [
    "soroban-sdk/testutils",
    "sep-41-token/testutils",
]

[dependencies]
soroban-sdk = { workspace = true }
sep-41-token = { workspace = true }
soroban-fixed-point-math = { workspace = true }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }
