[package]
name = "test-suites-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
soroban-sdk = { version = "25.0.2", features = ["testutils"] }
trading = { path = "../../trading", features = ["testutils"] }
test-suites = { path = ".." }
sep-40-oracle = { version = "1.4.0", features = ["testutils"] }
sep-41-token = { version = "1.4.0", features = ["testutils"] }

# Prevent this from interfering with parent workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_trading_general"
path = "fuzz_targets/fuzz_trading_general.rs"
doc = false

[[bin]]
name = "fuzz_fill"
path = "fuzz_targets/fuzz_fill.rs"
doc = false

[[bin]]
name = "fuzz_triggers"
path = "fuzz_targets/fuzz_triggers.rs"
doc = false

[[bin]]
name = "fuzz_liquidation"
path = "fuzz_targets/fuzz_liquidation.rs"
doc = false
