[package]
name = "test-suites-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
soroban-sdk = { version = "25.0.2", features = ["testutils"] }
trading = { path = "../../trading", features = ["testutils"] }
test-suites = { path = ".." }

# Prevent this from interfering with parent workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_trading_general"
path = "fuzz_targets/fuzz_trading_general.rs"
doc = false

[[bin]]
name = "fuzz_liquidation"
path = "fuzz_targets/fuzz_liquidation.rs"
doc = false
