[package]
name = "trading-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
soroban-sdk = { version = "25.0.2", features = ["testutils"] }
soroban-fixed-point-math = "1.5.0"
trading = { path = "..", features = ["testutils"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_pnl"
path = "fuzz_targets/fuzz_pnl.rs"
doc = false

[[bin]]
name = "fuzz_fee_breakdown"
path = "fuzz_targets/fuzz_fee_breakdown.rs"
doc = false

[[bin]]
name = "fuzz_interest"
path = "fuzz_targets/fuzz_interest.rs"
doc = false
